scrollbar fixed

--- a/src/components/vars.css
+++ b/src/components/vars.css
@@ -30,7 +30,7 @@
 	--scrollbar-thin-thumb: #202225;
 	--scrollbar-thin-track: transparent;
 	--scrollbar-auto-thumb: #202225;
-	--scrollbar-auto-track: #2e3338;
+	--scrollbar-auto-track: #2E3338;
 	--scrollbar-auto-scrollbar-color-thumb: #202225;
 	--scrollbar-auto-scrollbar-color-track: #2f3136;
 	--elevation-stroke: 0 0 0 1px #04040526;
